--- a/style.css
+++ b/style.css
@@ -90,12 +90,19 @@ pre code
 }
 
 /* #list-of-articles, #list-of-articles li */
-ul, li
-{
-  margin-left: -0.5em;
-  padding-left: -0.5em;
+/* ul, li */
+/* { */
+/*   margin-left: -0.5em; */
+/*   padding-left: -0.5em; */
 
-  /* list-style-type: none; */
+/*   /1* list-style-type: none; *1/ */
+/* } */
+
+#list-of-articles
+{
+  list-style-type: none;
+  list-style: none;
+  padding-left: 0;
 }
 
 #list-of-articles li
@@ -103,6 +110,11 @@ ul, li
   font-size: 1.1em;
   font-weight: bold;
   margin-bottom: 1em;
+}
+
+#list-of-articles li span
+{
+  font-weight: normal;
 }
 
 pre::-webkit-scrollbar {
