--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body
 {
   background-color: #191e2a;
-  color: #ccc;
+  color: #c4e6e9;
 
   font-family: sans-serif;
   font-size: 14pt;
@@ -13,7 +13,7 @@ html, body
 
 h1, h2, h3
 {
-  color: #C0D5D9;
+  color: #69d68b;
 }
 
 h2, h3
