--- a/style.css
+++ b/style.css
@@ -90,19 +90,20 @@ pre code
 }
 
 /* #list-of-articles, #list-of-articles li */
-/* ul, li */
-/* { */
-/*   margin-left: -0.5em; */
-/*   padding-left: -0.5em; */
+ul, li
+{
+  margin-left: -0.5em;
+  padding-left: -0.5em;
 
-/*   /1* list-style-type: none; *1/ */
-/* } */
+  /* list-style-type: none; */
+}
 
-#list-of-articles
+#list-of-articles, #list-of-articles li
 {
   list-style-type: none;
   list-style: none;
   padding-left: 0;
+  margin-left: 0;
 }
 
 #list-of-articles li
