added post about ai generated images and made tweaks to the css

--- a/style.css
+++ b/style.css
@@ -42,9 +42,24 @@ a:visited
   color: #9974d6;
 }
 
-img
+p img, figure img
 {
   max-width: 100%;
+  display: block;
+  margin: 0.5em 0;
+}
+
+figure
+{
+  margin: 1.5em 0.2em;
+}
+
+figcaption
+{
+  text-align: center;
+  font-weight: bold;
+  font-size: 0.8em;
+  margin-top: 0.4em;
 }
 
 code, pre
