--- a/style.css
+++ b/style.css
@@ -14,16 +14,12 @@ html, body
 h1, h2, h3
 {
   color: #69d68b;
+  margin-bottom: 0.3em;
 }
 
 h2, h3
 {
-  margin-bottom: 0;
-}
-
-h2
-{
-  font-size: 1.25em;
+  margin-top: 0;
 }
 
 main
@@ -86,6 +82,7 @@ pre code
 {
   background-color: #12151E;
   padding: 1em;
+  margin-bottom: 0.8em;
 }
 
 #daily-joke-container p
@@ -241,7 +238,8 @@ p
   line-height: 1.5;
   letter-spacing: 0.02em;
 
-  margin-top: 0.2em;
+  margin-top: 0;
+  margin-bottom: 1em;
   /* text-align: justify; */
 }
 
